feat: implement unified authentication system to resolve multiple auth conflicts
- Created single ICBUnifiedAuthService replacing multiple auth modules
- Consolidated all Microsoft Graph permissions into one service
- Fixed invalid permission scopes (removed InformationProtectionPolicy.Read.All)
- Updated main app to use unified authentication (auth-service-unified.js)
- Modified Monthly Report to use shared authentication service
- Updated Zero Trust Assessment to use unified auth
- Removed redundant auth services (auth-service.js, auth-service-new.js, monthly-report-auth.js)
- Added comprehensive error handling for authentication failures
- Implemented force reset functionality for authentication issues

Key improvements:
- Single sign-on experience across all webapp features
- Eliminated authentication conflicts between components
- Reduced permission scope to valid Microsoft Graph permissions
- Better error handling and user feedback
- Simplified authentication flow with redirect-based approach
- Comprehensive documentation in UNIFIED_AUTHENTICATION_GUIDE.md

Resolves issues:
- Multiple MSAL instances causing conflicts
- Intelligent Health Report requiring separate authentication
- Zero Trust Assessment authentication problems
- Permission scope validation errors (AADSTS650053)

--- a/public/index.html
+++ b/public/index.html
@@ -342,15 +342,12 @@
     <script src="/socket.io/socket.io.js"></script>
     <!-- MSAL Library for Microsoft Graph Authentication -->
     <script src="https://cdn.jsdelivr.net/npm/@azure/msal-browser@2.38.3/lib/msal-browser.min.js"></script>
-    <!-- ICB Auth Service -->
-    <script src="js/auth-service-new.js?v=1753867551"></script>
+    <!-- ICB Unified Auth Service -->
+    <script src="js/auth-service-unified.js?v=1753867551"></script>
     <!-- Zero Trust Assessment Scripts -->
     <script src="js/zero-trust-graph-service.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment-engine.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment.js?v=1753867551"></script>
-    <!-- Monthly Report Services -->
-    <script src="js/monthly-report-auth.js?v=1753867551"></script>
-    <script src="js/monthly-report-graph-service.js?v=1753867551"></script>
     
     <!-- PDF Generation Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
