--- a/public/index.html
+++ b/public/index.html
@@ -355,10 +355,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     
-    <!-- Monthly Report Chart Service -->
+    <!-- Monthly Report Services -->
+    <script src="js/monthly-report-graph-service.js?v=1753867551"></script>
     <script src="js/monthly-report-chart-service.js?v=1753867551"></script>
-    
-    <!-- Monthly Report PDF Generator -->
     <script src="js/monthly-report-pdf-generator.js?v=1753867551"></script>
     <script src="js/app.js?v=1753867551"></script>
 </body>
